@@ -1,3 +1,9 @@
+2004-05-07  Thien-Thi Nguyen  <ttn@gnu.org>
+
+	* b2m.c: Properly spell the name of Emacs.
+	(main): Parenthesize assignment when used
+	as truth value to prevent gcc warnings.
+
 2004-05-04  Thien-Thi Nguyen  <ttn@gnu.org>
 
 	* profile.c: Include config.h, not ../src/config.h.
